# tempiny

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
src/tempiny/: __init__.py
tempiny/: __init__.py
